fixed alignment of buttons on reel page, fixed alignment of 'new' button in navbar, ensured all buttons are wrapped in a tags, vertically aligned content within buttons

--- a/app/assets/stylesheets/bootstrap_overwrites/_nav.scss
+++ b/app/assets/stylesheets/bootstrap_overwrites/_nav.scss
@@ -37,14 +37,14 @@
   border-top: 1px solid $gray;
 }
 
-.navbar-new-button {
-  height: 35px;
-  padding: 5px 20px;
-
-  li > a:hover, li > a:focus {
-    background-color: transparent;
-    color: $red;
+.nav {
+  .navbar-new-button {
+    margin-top: 13px;
+    padding: 5px 20px;
   }
 
+  .navbar-new-button:hover, .navbar-new-button:focus {
+    background: $red !important;
+  }
 }
 
